# amoha-landing-page

./: .gitignore  main.py  pyproject.toml
app/db/: enums.py  models.py  schemas.py  session.py  tempCodeRunnerFile.py
app/static/assets/css/: main.css
app/templates/: index.html
app/utils/: config.py  utils.py
routers/: internship.py
