[project]
name = "amoha-codes-phase-one-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "jinja2>=3.1.6",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "sqladmin[full]>=0.21.0",
    "bcrypt>=4.3.0",
    "passlib>=1.7.4",
]
